examples/csharp/errors/invalid-request/obj/Debug/net8.0/InvalidRequest.genruntimeconfig.cache
0c4e65eb12bd872299a03073b43412692ca8dc3ae65c4d4dfb4ee4600bed4511
